# django_cli_sessions

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/django_cli_sessions/: django_cli_sessions.py  utils.py
